/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2021 HereweTech Co.LTD
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

syntax = "proto3";

package svc.sicky.setting;
option go_package = "./proto;proto";

import "google/protobuf/empty.proto";

service Setting {
  rpc InitDB(google.protobuf.Empty) returns (InitDBResp);

  rpc Set(SetReq) returns (SetResp);
  rpc Get(GetReq) returns (GetResp);
  rpc Delete(DeleteReq) returns (DeleteResp);
};

message InitDBResp { bool result = 1; };

message SettingDef {
  string id = 1;
  string key = 2;
  string value = 3;
  bool raw = 4;
  int64 status = 5;
};

message SetReq { SettingDef setting = 1; };
message SetResp { string id = 127; };

message GetReq {
  string key = 1;
  string id = 127;
};
message GetResp { SettingDef setting = 1; };

message DeleteReq {
  string key = 1;
  string id = 127;
};
message DeleteResp { bool deleted = 1; };
